# watch-compa

./: README.md
ios/watch-controller/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/watch-controller/Shared/Sources/Shared/Config/: AppConfig.swift  ConfigStore.swift
ios/watch-controller/Shared/Sources/Shared/Models/: TouchEvent.swift
ios/watch-controller/WatchApp/: WatchApp.swift
ios/watch-controller/WatchApp/Features/TouchPad/Views/: TouchPadView.swift
ios/watch-controller/iOSApp/: iOSApp.swift
ios/watch-controller/iOSApp/Assets.xcassets/AR Resources.arresourcegroup/: Contents.json
ios/watch-controller/iOSApp/Assets.xcassets/AR Resources.arresourcegroup/tag.arreferenceimage/: Contents.json
ios/watch-controller/iOSApp/Features/ARSession/Coordination/: ARCoordinator.swift
ios/watch-controller/iOSApp/Features/Root/: ContentView.swift
ios/watch-controller/iOSApp/Features/WatchBridge/: WatchConnectivityBridge.swift
ios/watch-controller/watch-controller-app/: ContentView.swift  TouchEvent.swift  WatchRelay.swift
ios/watch-controller/watch-controller-setup/: ContentView.swift  PhoneSocketBridge.swift  SettingsView.swift  iOSApp.swift
ios/watch-controller/watch-controller.xcodeproj/: project.pbxproj
ios/watch-controller/watch-controller.xcodeproj/xcshareddata/xcschemes/: ios-app.xcscheme  watch-app.xcscheme
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/adapters/: mod.rs
server/src/application/: mod.rs
server/src/domain/: mod.rs
server/src/infrastructure/: mod.rs
server/src/ports/: mod.rs
(+6 files in other folders)
